# insurance-uplift

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: benchmark_uplift.py  insurance_uplift_demo.py  run_tests.py
src/insurance_uplift/: __init__.py  _utils.py  constrain.py  data.py  evaluate.py  fit.py  segment.py
tests/: conftest.py  test_constrain.py  test_data.py  test_evaluate.py  test_fit.py  test_integration.py  test_segment.py  test_utils.py
