[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-uplift"
version = "0.1.0"
description = "Heterogeneous treatment effects for UK personal lines insurance retention targeting"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "insurance",
    "uplift",
    "causal-inference",
    "heterogeneous-treatment-effects",
    "retention",
    "CATE",
    "causal-forest",
    "ENBP",
    "Consumer-Duty",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "polars>=1.0",
    "econml>=0.15.1,<0.17",
    "catboost>=1.2",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
survival = ["lifelines>=0.27", "rpy2>=3.5"]
policytree = ["rpy2>=3.5"]
dev = ["pytest>=7.0", "pytest-cov", "pyarrow>=12.0", "pandas>=2.0"]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-uplift"
Repository = "https://github.com/burning-cost/insurance-uplift"
Documentation = "https://github.com/burning-cost/insurance-uplift#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_uplift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
